style: fix case study banner spacing

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -14,6 +14,7 @@
 
 body{
   background-color: #272727;
+  overflow-x: hidden !important;
 }
 
 .gradient {
